Mon Oct 13 08:58:16 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/PSS/Makefile.parser:
	* tests/Objref_Sequence_Test/client.cpp: 

	  Applied patches from Olli Savia to get the above compiling with
	  LynxOS.

Sun Oct 12 20:53:35 2003  Huang-Ming Huang  <hh1@cse.wustl.edu>

        * orbsvcs/orbsvcs/FTORB.mpc
          Fixed incorrect component name for FTORB_Utils

Sun Oct 12 17:33:43 2003  Huang-Ming Huang  <hh1@cse.wustl.edu>

        * tao/Utils/Implicit_Deactivator.h
        * tao/Utils/ORB_Destroyer.h
        * tao/Utils/PolicyList_Destroyer.h
        * tao/Utils/utils_export.h
          Added  Win32 Export directives.

        * orbsvcs/orbsvcs/FaultTolerance.mpc
          Changed dependacy from ftorb to ftorbutils.

        * orbsvcs/orbsvcs/ESF/ESF_Worker.h
        * orbsvcs/orbsvcs/ESF/ESF_Worker.cpp
        * orbsvcs/orbsvcs/ESF/ESF_Copy_On_Read.cpp
        * orbsvcs/orbsvcs/ESF/ESF_Copy_On_Write.cpp
        * orbsvcs/orbsvcs/ESF/ESF_Delayed_Changes.cpp
        * orbsvcs/orbsvcs/ESF/ESF_Immediate_Changes.cpp
          Added set_size() to TAO_ESF_Worker which allows worker objects
          to know the size of the collection before iteration begins.

Sun Oct 12 14:13:16 2003  Venkita Subramonian  <venkita@cs.wustl.edu>

        * examples/Kokyu_dsrt_schedulers/fp_example/Makefile.fp_client:
        * examples/Kokyu_dsrt_schedulers/fp_example/Makefile.fp_server:
        * examples/Kokyu_dsrt_schedulers/fp_example/fp_example.mpc:
        * examples/Kokyu_dsrt_schedulers/mif_example/Makefile.mif_client:
        * examples/Kokyu_dsrt_schedulers/mif_example/Makefile.mif_server:
        * examples/Kokyu_dsrt_schedulers/mif_example/mif_example.mpc:
        * examples/Kokyu_dsrt_schedulers/muf_example/Makefile.muf_client:
        * examples/Kokyu_dsrt_schedulers/muf_example/Makefile.muf_server:
        * examples/Kokyu_dsrt_schedulers/muf_example/muf_example.mpc:

          Modified mpc files to use the newly created